--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,8 +28,10 @@ android {
 }
 
 dependencies {
-
-    compileOnly 'org.java-websocket:Java-WebSocket:1.5.2'
+    implementation 'com.google.code.gson:gson:+'
+    implementation group: 'org.bouncycastle', name: 'bcprov-jdk15on', version: '1.69'
+    implementation 'com.squareup.picasso:picasso:+'
+    implementation 'org.java-websocket:Java-WebSocket:1.5.2'
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
